--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/gitname//test-final",
+  "homepage": "https://github.com/MayanShahin/test",
   "name": "finalproject",
   "version": "0.1.0",
   "private": true,
