--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "homepage": "https://MayanShahin.github.io/test",
+  "homepage": "https://MayanShahin.github.io/test-final",
   "name": "finalproject",
   "version": "0.1.0",
   "private": true,
-  "dependencies": { 
+  "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
