--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MayanShahin.github.io/test-final",
+  "homepage": "https://MayanShahin.github.io/test5",
   "name": "finalproject",
   "version": "0.1.0",
   "private": true,
